Bug 513110 - Adjust the maximum break type (only used in assertions) to reflect reality.  r=dholbert